Maintain separate MSAA pipeline state for non-3D shaders

XMLWordPrintable

    • generic
    • os_x

      Run fx83dfeatures.SubSceneAndAntiAliasingTest from apps/toys/FX8-3DFeatures with MTL validation and it crashes with below log:

      -[MTLDebugRenderCommandEncoder setRenderPipelineState:]:1604: failed assertion `Set Render Pipeline State Validation
      For color attachment 0, the texture sample count (4) does not match the renderPipelineState colorSampleCount (1).
      The color sample count (4) does not match the renderPipelineState's color sample count (1)
      The raster sample count (4) does not match the renderPipelineState's raster sample count (1)

      Looks like this is happening after https://bugs.openjdk.org/browse/JDK-8314401, because after this change we have 2 different sample counts. One for MSAA and another for non-MSAA.

            Assignee:
            Jayathirth D V
            Reporter:
            Jayathirth D V
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: